# onepassword-sdk-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  upstream-extism-watch.yml
docs/superpowers/plans/: 2026-03-30-onepassword-sdk-rust.md
docs/superpowers/specs/: 2026-03-30-onepassword-sdk-rust-design.md
examples/: README.md  desktop_app.rs  example.rs  service_account.rs
src/: client.rs  core.rs  core_extism.rs  core_shared_lib.rs  environments.rs  errors.rs  groups.rs  items.rs  items_files.rs  items_shares.rs  lib.rs  secrets.rs  types.rs  vaults.rs
