[package]
name = "onepassword-sdk"
version = "0.4.1-beta.1"
edition = "2024"
publish = false
license = "MIT"
description = "1Password SDK for Rust"

[features]
default = ["wasm"]
wasm = ["dep:extism", "dep:getrandom"]
desktop = ["dep:libloading", "dep:base64"]

[dependencies]
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
extism = { version = "1", optional = true }
getrandom = { version = "0.2", optional = true }
libloading = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
